crud swagger
