# docs/swagger.yaml
@@ -1,4 +1,47 @@
 basePath: /
+definitions:
+  model.Category:
+    properties:
+      category:
+        type: string
+      created_at:
+        type: string
+      deleted_at:
+        type: string
+      id:
+        type: integer
+      updated_at:
+        type: string
+    type: object
+  model.CategoryInput:
+    properties:
+      category:
+        example: jeruk inpis
+        type: string
+    required:
+    - category
+    type: object
+  model.Response:
+    properties:
+      responseCode:
+        type: integer
+      responseData: {}
+      responseDesc:
+        type: string
+      responseMeta:
+        $ref: '#/definitions/model.ResponseMeta'
+    type: object
+  model.ResponseMeta:
+    properties:
+      page:
+        type: integer
+      per_page:
+        type: integer
+      total_pages:
+        type: integer
+      total_records:
+        type: integer
+    type: object
 host: localhost:8080
 info:
   contact:
@@ -8,5 +51,127 @@ info:
   description: This is a sample server for managing Point of Sale.
   title: Point of Sale API
   version: "1.0"
-paths: {}
+paths:
+  /categories:
+    get:
+      consumes:
+      - application/json
+      description: Get all categories
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Response'
+      summary: Get all categories
+      tags:
+      - categories
+    post:
+      consumes:
+      - application/json
+      description: Create a new category
+      parameters:
+      - description: Category
+        in: body
+        name: category
+        required: true
+        schema:
+          $ref: '#/definitions/model.CategoryInput'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/model.Response'
+      summary: Create a new category
+      tags:
+      - categories
+  /categories/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a category
+      parameters:
+      - description: Category ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Response'
+      summary: Delete a category
+      tags:
+      - categories
+    get:
+      consumes:
+      - application/json
+      description: Get category by ID
+      parameters:
+      - description: Category ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Response'
+      summary: Get category by ID
+      tags:
+      - categories
+    put:
+      consumes:
+      - application/json
+      description: Update a category
+      parameters:
+      - description: Category ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Category
+        in: body
+        name: category
+        required: true
+        schema:
+          $ref: '#/definitions/model.Category'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Response'
+      summary: Update a category
+      tags:
+      - categories
+  /categories/permanently/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Permanently delete a category
+      parameters:
+      - description: Category ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Response'
+      summary: Permanently delete a category
+      tags:
+      - categories
 swagger: "2.0"
